# TerraSight

./: .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
src/: config.py  http_client.py  wildfire_predictor.py
src/analysis/: cascades.py  economics.py  reports.py  scenario.py
src/data/: cities.py  fire_history.py  flood_history.py  volcano_coords.py
src/ml/: features.py  registry.py  train.py
src/ml/models/: flood.pkl  flood_card.json  wildfire.pkl  wildfire_card.json
src/modules/: __init__.py  agriculture.py  air_quality.py  avalanche.py  base.py  climate_trends.py  cyclone.py  drought.py  earthquake.py  flood.py  heatwave.py  infrastructure.py  landslide.py  snapshot.py  tornado.py  tsunami.py  volcano.py  wildfire.py  winter.py
src/routes/: api.py
src/services/: geocoding.py  nasa.py  noaa.py  open_meteo.py  usgs.py
static/css/: main.css
static/js/: app.js  dashboard.js  home.js  module.js  reports.js  simulator.js
templates/: 404.html  about.html  base.html  dashboard.html  index.html  module.html  reports.html  simulator.html
