[tool.poetry]
name = "wildfire_app"
version = "0.1.0"
description = ""
authors = ["Ronit Agarwal ronitcodes@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
# keep these in sync with requirements.txt, sklearn especially: the trained
# model pickles in src/ml/models were saved with scikit-learn 1.7
python = ">=3.11,<3.13"
Flask = "^3.1.1"
Flask-Cors = "^6.0.0"
Flask-SQLAlchemy = "^3.1.1"
SQLAlchemy = "^2.0.41"
pandas = "^2.3.1"
numpy = "^2.3.1"
scikit-learn = "^1.7.1"
requests = "^2.32.4"
gunicorn = "^23.0.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
