# dependencies live in requirements.txt (installed with pip). this file only
# holds dev tool config now. it deliberately has no [tool.poetry] / [build-system]
# so Render and other hosts use pip + requirements.txt instead of Poetry, which
# is the path that matches our pinned, tested versions.

[tool.pyright]
useLibraryCodeForTypes = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293", "E501"]
